# OfflineGestureRecognition

./: .gitignore  MODEL.md  README.md  inference.py  pyproject.toml  train.py
configs/: __init__.py  defaults.py
dataset/: __init__.py  gesture.py
engine/: __init__.py  model.py  postprocess.py  predictor.py  trainer.py
scripts/: setup-windows.ps1
src/finger_ml/: __init__.py  audit.py  capture.py  eval_events.py  preprocess.py  review.py
utils/: __init__.py  cli.py  features.py  hand_tracking.py  labels.py  mediapipe_video.py  video_io.py
